Fixed slight text spacing error

--- a/index.css
+++ b/index.css
@@ -203,6 +203,10 @@ strong {
     margin-top: 5em;
 }
 
+.mt-1 {
+    margin-top: 4.4em;
+}
+
 .mb-1 {
     margin-bottom: 1em;
 }
